crates/nash-config/src/snapshots/nash_config__parse__build_tests__workspace_compiler_traces.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"workspace\",\"members\":[],\"compilerTraces\":false}"
info: diagnostic
---
  × 'nash.jsonc' at 1:34: 'compilerTraces' must be set in workspace members,
  │ not the workspace config
