crates/nash-config/src/snapshots/nash_config__parse__build_tests__workspace_optimizer_unavailable.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"workspace\",\"members\":[],\"optimize\":2}"
info: diagnostic
---
  × 'nash.jsonc' at 1:34: 'optimize' is unavailable; optimizer support is not
  │ implemented
