crates/nash-config/src/snapshots/nash_config__parse__build_tests__workspace_trace_level.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"workspace\",\"members\":[],\"traceLevel\":\"compact\"}"
info: diagnostic
---
  × 'nash.jsonc' at 1:34: 'traceLevel' must be set in workspace members, not
  │ the workspace config
